k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evidently-service
  labels:
    app: evidently
spec:
  type: NodePort
  selector:
    app: evidently
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
